<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/scrollViewStyle"
    android:background="@color/colorLightPink"
    tools:context=".play">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            style="@style/activityLabelStyle"
            android:background="@android:color/white"
            android:text="@string/playLabel" />

        <TextView
            style="@style/nowPlayingDescStyle"
            android:background="@android:color/white"
            android:text="@string/nowPlayDes" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:src="@drawable/despacito"></ImageView>

        <TextView
            style="@style/nowPlayingSongStyle"
            android:text="@string/songName" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/duration_id"
                style="@style/favSongNameStyle"
                android:layout_alignParentLeft="true"
                android:text="@string/nowPlayingDuration" />

            <TextView
                style="@style/favSongDurationStyle"
                android:text="@string/duration1" />

            <View
                style="@style/dividerLineStyle"
                android:layout_below="@id/duration_id"
                android:background="@color/colorPrimaryDark" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/pause_id"
                style="@style/midButtonStyle"
                android:background="@drawable/pause" />

            <Button
                android:id="@+id/prev_id"
                style="@style/midButtonStyle"
                android:layout_toLeftOf="@+id/pause_id"
                android:background="@drawable/previous" />

            <Button
                android:id="@+id/next_id"
                style="@style/midButtonStyle"
                android:layout_toRightOf="@+id/pause_id"
                android:background="@drawable/next" />

            <Button
                android:id="@+id/play_settings_id"
                style="@style/leftButtonStyle"
                android:background="@drawable/settings" />

            <Button
                android:id="@+id/play_playlist_id"
                style="@style/rightButtonStyle"
                android:background="@drawable/playlist_4" />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>