<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/scrollViewStyle"
    android:background="@color/colorLightPink"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            style="@style/layoutStylePayActivity">

            <TextView
                style="@style/activityLabelStyle"
                android:background="@android:color/white"
                android:text="@string/payLabel" />

            <TextView
                style="@style/paymentDescStyle"
                android:background="@android:color/white"
                android:text="@string/paymentDesc" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white">

            <TextView
                style="@style/paymentStyle"
                android:text="@string/paymentText" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/payment_home_btn_id"
                style="@style/midButtonStyle"
                android:background="@drawable/home" />
        </RelativeLayout>

    </LinearLayout>
</ScrollView>

